openmp/examples/for/OUTPUTS/one-loop-2.txt
[kbaniya@node4107 for]$ ls
one-loop-1.c  one-loop-2  one-loop-2.c  two-loops-1.c  two-loops-2.c
[kbaniya@node4107 for]$ ./one-loop-2
3        6       22 
3        7       23 
1        2       18 
1        3       19 
2        4       20 
2        5       21 
9        15      31 
8        14      30 
5        10      26 
5        11      27 
7        13      29 
4        8       24 
4        9       25 
0        0       16 
0        1       17 
6        12      28 
[kbaniya@node4107 for]$ export OMP_NUM_THREADS = 4
bash: export: `=': not a valid identifier
bash: export: `4': not a valid identifier
[kbaniya@node4107 for]$ export OMP_NUM_THREADS=4
[kbaniya@node4107 for]$ ./one-loop-2
0        0       16 
0        1       17 
0        2       18 
0        3       19 
3        12      28 
3        13      29 
3        14      30 
3        15      31 
1        4       20 
1        5       21 
1        6       22 
1        7       23 
2        8       24 
2        9       25 
2        10      26 
2        11      27 
[kbaniya@node4107 for]$ gcc one-loop-2.c -o one-loop-2.o
one-loop-2.c: In function 'main':
one-loop-2.c:12:7: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   12 |       printf("%d \t %d \t %d \n", id, i, a[i]);
      |       ^~~~~~
one-loop-2.c:2:1: note: include '<stdio.h>' or provide a declaration of 'printf'
    1 | #include <omp.h>
  +++ |+#include <stdio.h>
    2 | 
one-loop-2.c:12:7: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   12 |       printf("%d \t %d \t %d \n", id, i, a[i]);
      |       ^~~~~~
one-loop-2.c:12:7: note: include '<stdio.h>' or provide a declaration of 'printf'
/tmp/ccKylGEj.o: In function `main':
one-loop-2.c:(.text+0x98): undefined reference to `omp_get_thread_num'
collect2: error: ld returned 1 exit status
[kbaniya@node4107 for]$ ./one-loop-2
0        0       16 
0        1       17 
0        2       18 
0        3       19 
3        12      28 
3        13      29 
3        14      30 
3        15      31 
2        8       24 
2        9       25 
2        10      26 
2        11      27 
1        4       20 
1        5       21 
1        6       22 
1        7       23 
[kbaniya@node4107 for]$ export OMP_NUM_THREADS=10
[kbaniya@node4107 for]$ ./one-loop-2
2        4       20 
2        5       21 
3        6       22 
3        7       23 
1        2       18 
1        3       19 
4        8       24 
4        9       25 
0        0       16 
0        1       17 
6        12      28 
8        14      30 
7        13      29 
5        10      26 
5        11      27 
9        15      31 